--- a/styles.css
+++ b/styles.css
@@ -125,13 +125,14 @@ li a:hover {
 .side {
   position: fixed;
   display: flex;
-  background-color: #b4c5e4;
+  background-color: #b8c8ff;
   top: calc(10vh + 15px);
   height: calc(90vh - 30px);
   left: 15px;
   width: calc(25vw - 15px);
   justify-content: center;
   border-radius: 30px;
+  color: whitesmoke;
 }
 
 .events {
